[package]
name = "aboard"
version = "0.1.0"
authors = ["AntoineMoPa"]
edition = "2018"

[dependencies]
shiplift = { git = "https://github.com/softprops/shiplift.git", branch = "master" }
futures = "0.3.1"
tokio = { version = "0.2.6", features = ["macros"] }
futures-util = "0.3"
futures_codec = "0.3"
clap = "2.33"
subprocess = "0.1"
users = "0.11"
colored = "2"

[[bin]]
name = "aboard"
path = "aboard.rs"
